--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <img src="site playtec/images/logoplaytec.png" alt="">
+        <img src="imagens/logoplaytec.png" alt="">
         <nav>
             <a href="#">Sobre</a>
             <a href="#">Serviços</a>
@@ -26,7 +26,7 @@
                 <div id="textotv"><p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Molestias culpa ab dignissimos</p></div>
             </section>
            <section class="video">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/JL8O2zmpiKo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/mBDBsRCHfHo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                 <div><p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus quasi culpa eveniet voluptatibus veritatis, voluptate ad soluta minus laboriosam labore reprehenderit natus. Molestiae repellendus ratione nulla ipsum temporibus doloribus quasi.</p></div>
             </section>
             <section class="slide2">
