adicionei novas imagens e modifiquei o design

--- a/index.html
+++ b/index.html
@@ -41,22 +41,27 @@
 
             <section class="itens">
                 <div>
-                    <img src="imagens/paisagem-p.png">
-                    <div class="legenda"><a href="#">Lorem ipsum dolor sit.</a></div>
+                    <img src="imagens/television-2237425_1280.webp">
+                    <a href="#" class="legenda">Lorem ipsum dolor sit.</a></div>
                 </div>
                 <div>
-                    <img src="imagens/paisagem-p.png">
-                    <div class="legenda"><a href="#">Lorem ipsum dolor sit.</a></div>
+                    <img src="imagens/television-2237425_1280.webp">
+                    <a href="#" class="legenda">Lorem ipsum dolor sit.</a></div>
                 </div>
                 <div>
-                    <img src="imagens/paisagem-p.png">
-                    <div class="legenda"><a href="#">Lorem ipsum dolor sit.</a></div>
+                    <img src="imagens/television-2237425_1280.webp">
+                    <a href="#" class="legenda">Lorem ipsum dolor sit.</a></div>
                 </div>
                 <div>
-                    <img src="imagens/paisagem-p.png">
-                    <div class="legenda"><a href="#">Lorem ipsum dolor sit.</a></div>
+                    <img src="imagens/television-2237425_1280.webp">
+                    <a href="#" class="legenda">Lorem ipsum dolor sit.</a>
                 </div>
+            </section>
 
+            <section>
+                <div class="slide4">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque, ipsam quaerat labore nam quae corporis modi similique obcaecati. Exercitationem dicta, quas totam magnam dolor delectus ratione eveniet nobis nostrum aliquam.</p>
+                </div>
             </section>
         </article>
     </main>
